--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,4 @@
+% Safety Benchmarks
 @article{ji2023beavertails,
   title={BeaverTails: Towards Improved Safety Alignment of LLM via a Human-Preference Dataset},
   author={Ji, Jiaming and Liu, Mickel and Dai, Juntao and Pan, Xuehai and Zhang, Chi and Bian, Ce and Sun, Ruiyang and Wang, Yizhou and Yang, Yaodong},
@@ -13,6 +14,14 @@
   year={2024}
 }
 
+@article{zou2023advbench,
+  title={Universal and Transferable Adversarial Attacks on Aligned Language Models},
+  author={Zou, Andy and Wang, Zifan and Carlini, Nicholas and Nasr, Milad and Kolter, J Zico and Fredrikson, Matt},
+  journal={arXiv preprint arXiv:2307.15043},
+  year={2023}
+}
+
+% Model
 @article{grattafiori2024llama,
   title={The Llama 3 Herd of Models},
   author={Grattafiori, Aaron and Dubey, Abhimanyu and Jauhri, Abhinav and others},
@@ -20,9 +29,104 @@
   year={2024}
 }
 
+% Infrastructure
 @inproceedings{kwon2023vllm,
   title={Efficient Memory Management for Large Language Model Serving with PagedAttention},
   author={Kwon, Woosuk and Li, Zhuohan and Zhuang, Siyuan and Sheng, Ying and Zheng, Lianmin and Yu, Cody Hao and Gonzalez, Joseph E and Zhang, Hao and Stoica, Ion},
   booktitle={Proceedings of the ACM SIGOPS 29th Symposium on Operating Systems Principles},
+  year={2023}
+}
+
+% Temperature and Sampling
+@inproceedings{holtzman2020curious,
+  title={The Curious Case of Neural Text Degeneration},
+  author={Holtzman, Ari and Buys, Jan and Du, Li and Forbes, Maxwell and Choi, Yejin},
+  booktitle={International Conference on Learning Representations},
+  year={2020}
+}
+
+@article{renze2024temperature,
+  title={The Effect of Sampling Temperature on Problem Solving in Large Language Models},
+  author={Renze, Matthew and Guven, Erhan},
+  journal={arXiv preprint arXiv:2402.05201},
+  year={2024}
+}
+
+% Red Teaming and Jailbreaking
+@article{perez2022red,
+  title={Red Teaming Language Models with Language Models},
+  author={Perez, Ethan and Ringer, Sam and Lukosiute, Kamile and Nguyen, Karina and Chen, Edwin and Heiner, Scott and Pettit, Craig and Olsson, Catherine and Kundu, Sandipan and Kadavath, Saurav and others},
+  journal={arXiv preprint arXiv:2202.03286},
+  year={2022}
+}
+
+@article{ganguli2022red,
+  title={Red Teaming Language Models to Reduce Harms: Methods, Scaling Behaviors, and Lessons Learned},
+  author={Ganguli, Deep and Lovitt, Liane and Kernion, Jackson and Askell, Amanda and Bai, Yuntao and Kadavath, Saurav and Mann, Ben and Perez, Ethan and Schiefer, Nicholas and Ndousse, Kamal and others},
+  journal={arXiv preprint arXiv:2209.07858},
+  year={2022}
+}
+
+@article{wei2024jailbroken,
+  title={Jailbroken: How Does LLM Safety Training Fail?},
+  author={Wei, Alexander and Haghtalab, Nika and Steinhardt, Jacob},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  year={2024}
+}
+
+% LLM Calibration and Consistency
+@article{huang2024survey,
+  title={A Survey on Calibration of Large Language Models},
+  author={Huang, Jiahui and Chen, Kevin and Cao, Yixin and Shi, Kai and Xiang, Chong and Liu, Chengyue and Xie, Xuyang and Chen, Yibo and Xiao, Tong and Zhu, Jingbo},
+  journal={arXiv preprint arXiv:2308.01781},
+  year={2024}
+}
+
+@article{lin2024generating,
+  title={Generating Confidence in Large Language Models: A Comprehensive Study},
+  author={Lin, Stephanie and Hilton, Jacob and Evans, Owain},
+  journal={arXiv preprint arXiv:2305.14975},
+  year={2023}
+}
+
+@article{kadavath2022language,
+  title={Language Models (Mostly) Know What They Know},
+  author={Kadavath, Saurav and Conerly, Tom and Askell, Amanda and Henighan, Tom and Drain, Dawn and Perez, Ethan and Schiefer, Nicholas and Hatfield-Dodds, Zac and DasSarma, Nova and Tran-Johnson, Eli and others},
+  journal={arXiv preprint arXiv:2207.05221},
+  year={2022}
+}
+
+% Safety Training
+@article{bai2022training,
+  title={Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback},
+  author={Bai, Yuntao and Jones, Andy and Ndousse, Kamal and Askell, Amanda and Chen, Anna and DasSarma, Nova and Drain, Dawn and Fort, Stanislav and Ganguli, Deep and Henighan, Tom and others},
+  journal={arXiv preprint arXiv:2204.05862},
+  year={2022}
+}
+
+@article{ouyang2022training,
+  title={Training Language Models to Follow Instructions with Human Feedback},
+  author={Ouyang, Long and Wu, Jeffrey and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={27730--27744},
+  year={2022}
+}
+
+% LLM as Judge
+@article{zheng2023judging,
+  title={Judging LLM-as-a-judge with MT-Bench and Chatbot Arena},
+  author={Zheng, Lianmin and Chiang, Wei-Lin and Sheng, Ying and Zhuang, Siyuan and Wu, Zhanghao and Zhuang, Yonghao and Lin, Zi and Li, Zhuohan and Li, Dacheng and Xing, Eric P and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  year={2023}
+}
+
+% Evaluation Methodology
+@article{liang2023holistic,
+  title={Holistic Evaluation of Language Models},
+  author={Liang, Percy and Bommasani, Rishi and Lee, Tony and Tsipras, Dimitris and Soylu, Dilara and Yasunaga, Michihiro and Zhang, Yian and Narayanan, Deepak and Wu, Yuhuai and Kumar, Ananya and others},
+  journal={Transactions on Machine Learning Research},
   year={2023}
 }
