--- a/paper/main.tex
+++ b/paper/main.tex
@@ -27,7 +27,7 @@
 \maketitle
 
 \begin{abstract}
-Current safety evaluations of large language models rely on single-shot testing, implicitly assuming that model responses are deterministic and representative of the model's safety alignment. We challenge this assumption by investigating the stability of safety refusal decisions across random seeds and temperature settings. Testing two instruction-tuned models from different families (Llama 3.1 8B, Qwen 2.5 7B) on 876 harmful prompts across 20 different sampling configurations (4 temperatures $\times$ 5 random seeds), we find that \textbf{32\% of prompts exhibit decision flips}---the model refuses in some configurations but complies in others---with 14.3\% [95\% CI: 12.0\%--16.6\%] showing substantial instability (SSI $<$ 0.8). Our Safety Stability Index (SSI) reveals that higher temperatures significantly reduce decision stability ($\chi^2 = 133.15$, $p < 0.001$), with mean SSI dropping from 0.987 at temperature 0.0 to 0.904 at temperature 1.0. We validate our findings across both model families, observing consistent instability rates. These findings demonstrate that single-shot safety evaluations are insufficient for reliable safety assessment and that evaluation protocols must account for stochastic variation in model behavior. We show that single-shot evaluation agrees with multi-sample ground truth only 92.4\% of the time, and recommend using at least 3 samples per prompt for reliable safety assessment.
+Current safety evaluations of large language models rely on single-shot testing, implicitly assuming that model responses are deterministic and representative of the model's safety alignment. We challenge this assumption by investigating the stability of safety refusal decisions across random seeds and temperature settings. Testing four instruction-tuned models from three families (Llama 3.1 8B, Qwen 2.5 7B, Qwen 3 8B, Gemma 3 12B) on 876 harmful prompts across 20 different sampling configurations (4 temperatures $\times$ 5 random seeds), we find that \textbf{18--32\% of prompts exhibit decision flips}---the model refuses in some configurations but complies in others---depending on the model. Our Safety Stability Index (SSI) reveals that higher temperatures significantly reduce decision stability ($\chi^2 = 133.15$, $p < 0.001$), with mean SSI dropping from 0.951 at temperature 0.0 to 0.896 at temperature 1.0. We validate our findings across all model families and with an external Claude judge, observing consistent instability patterns. The most stable model (Gemma 3 12B, SSI=0.948) is also the least restrictive (78.5\% refusal rate), suggesting a potential stability-conservatism tradeoff. These findings demonstrate that single-shot safety evaluations are insufficient for reliable safety assessment and that evaluation protocols must account for stochastic variation in model behavior. We show that single-shot evaluation agrees with multi-sample ground truth only 92.4\% of the time, and recommend using at least 3 samples per prompt for reliable safety assessment.
 \end{abstract}
 
 \section{Introduction}
@@ -36,13 +36,13 @@ As large language models (LLMs) are increasingly deployed in real-world applicat
 
 However, modern LLMs employ stochastic sampling during inference, introducing variability through both temperature-controlled randomness and random seed initialization. While this variability is well-documented for general generation tasks, its impact on safety-critical decisions remains underexplored. If safety decisions are unstable across sampling configurations, single-shot evaluations may significantly misrepresent a model's true safety profile---either overestimating safety by catching a safe sample from an unstable prompt, or underestimating it by observing a failure case that rarely occurs.
 
-In this work, we systematically investigate the stability of LLM safety refusal behavior by testing the same harmful prompts across multiple random seeds and temperature settings. We introduce the \textbf{Safety Stability Index (SSI)}, a metric that quantifies how consistently a model makes the same safety decision across different sampling configurations. We evaluate two instruction-tuned models from different families---Llama 3.1 8B Instruct and Qwen 2.5 7B Instruct---on 876 harmful prompts from the BeaverTails dataset across 20 configurations (4 temperatures $\times$ 5 random seeds), generating 35,040 total responses.
+In this work, we systematically investigate the stability of LLM safety refusal behavior by testing the same harmful prompts across multiple random seeds and temperature settings. We introduce the \textbf{Safety Stability Index (SSI)}, a metric that quantifies how consistently a model makes the same safety decision across different sampling configurations. We evaluate four instruction-tuned models from three families---Llama 3.1 8B Instruct, Qwen 2.5 7B Instruct, Qwen 3 8B, and Gemma 3 12B Instruct---on 876 harmful prompts from the BeaverTails dataset across 20 configurations (4 temperatures $\times$ 5 random seeds), generating 70,080 total responses. To validate our findings and address potential same-family judge bias, we additionally evaluate the newer models using Claude 3.5 Haiku as an external judge.
 
 Our findings reveal significant instability in safety decisions:
 \begin{itemize}
-    \item \textbf{32\% of prompts exhibit decision flips} across sampling configurations, with 14.3\% [95\% CI: 12.0\%--16.6\%] showing substantial instability (SSI $<$ 0.8)
-    \item \textbf{Temperature significantly affects stability} ($\chi^2 = 133.15$, $p < 0.001$): Lower temperatures yield more stable decisions (mean SSI = 0.987 at temp 0.0) compared to higher temperatures (mean SSI = 0.904 at temp 1.0)
-    \item \textbf{Instability is consistent across model families}: Both models (Llama and Qwen) exhibit similar instability patterns despite different training approaches, suggesting this is a fundamental property of current safety training
+    \item \textbf{25.5\% of prompts exhibit decision flips} across sampling configurations on average, ranging from 18--32\% depending on the model
+    \item \textbf{Temperature significantly affects stability} ($\chi^2 = 133.15$, $p < 0.001$): Lower temperatures yield more stable decisions (mean SSI = 0.951 at temp 0.0) compared to higher temperatures (mean SSI = 0.896 at temp 1.0)
+    \item \textbf{Instability is consistent across model families}: All four models from three families (Llama, Qwen, Gemma) exhibit instability patterns despite different training approaches, suggesting this is a fundamental property of current safety training
     \item \textbf{Borderline prompts exist}: 7.9\% of prompts fall in the highly unstable range (SSI 0.4--0.6), predominantly copyright-related requests where the model is uncertain whether to comply
     \item \textbf{Single-shot evaluation is unreliable}: Evaluating with N=1 sample agrees with ground truth only 92.4\% of the time; N$\geq$3 samples are needed for 95\% reliability
 \end{itemize}
@@ -65,13 +65,13 @@ These results have important implications for safety evaluation practices. Singl
 
 \subsection{Experimental Design}
 
-\textbf{Models.} We evaluate two instruction-tuned models from different families: (1) Llama 3.1 8B Instruct~\cite{grattafiori2024llama}, Meta's open-weight model with comprehensive safety alignment; and (2) Qwen 2.5 7B Instruct, representing recent advances from Alibaba's model family. Both models are in the 7-8B parameter range and are designed for instruction-following with safety considerations.
+\textbf{Models.} We evaluate four instruction-tuned models from three distinct families: (1) Llama 3.1 8B Instruct~\cite{grattafiori2024llama}, Meta's open-weight model; (2) Qwen 2.5 7B Instruct, from Alibaba's model family; (3) Qwen 3 8B, representing the latest Qwen generation; and (4) Gemma 3 12B Instruct, Google's recent instruction-tuned model. This selection spans parameter counts from 7B to 12B and represents three major model families with distinct training approaches.
 
 \textbf{Dataset.} We use 876 harmful prompts from the BeaverTails dataset~\cite{ji2023beavertails}, covering categories including violence, hate speech, illegal activities, and other harmful content.
 
-\textbf{Sampling Configurations.} We test 4 temperature values (0.0, 0.3, 0.7, 1.0) $\times$ 5 random seeds (42--46), yielding 20 unique configurations per model and 35,040 total responses across both models. At temperature 0.0, we use greedy decoding; any residual variation across seeds may arise from GPU non-determinism in floating-point operations. All inference was performed using vLLM~\cite{kwon2023vllm} for efficient batch generation.
+\textbf{Sampling Configurations.} We test 4 temperature values (0.0, 0.3, 0.7, 1.0) $\times$ 5 random seeds (42--46), yielding 20 unique configurations per model and 70,080 total responses across all four models. At temperature 0.0, we use greedy decoding; any residual variation across seeds may arise from GPU non-determinism in floating-point operations. All inference was performed using vLLM~\cite{kwon2023vllm} for efficient batch generation.
 
-\textbf{Response Classification.} We use Llama 3.1 70B Instruct as a judge model to classify each response into three categories:
+\textbf{Response Classification.} We use Llama 3.1 70B Instruct as our primary judge model to classify each response into three categories. For the newer models (Qwen 3 and Gemma 3), we additionally employ Claude 3.5 Haiku as an external judge from a different model family to validate findings and address potential same-family bias concerns:
 \begin{itemize}
     \item \textbf{REFUSE}: Model declines to answer or provides safety-focused redirection
     \item \textbf{PARTIAL}: Model provides limited information with caveats or warnings
@@ -126,7 +126,7 @@ Figure~\ref{fig:ssi_dist} presents the distribution of SSI scores across all 876
 
 \subsection{Temperature Effects}
 
-Figure~\ref{fig:temp_effect} illustrates the relationship between temperature and both compliance rate and mean SSI. We observe that stability decreases monotonically as temperature increases, with this effect being highly significant ($\chi^2 = 133.15$, $p < 0.001$; Kruskal-Wallis $H = 185.43$, $p < 0.001$). Mean SSI drops from 0.987 [95\% CI: 0.983--0.991] at temperature 0.0 to 0.904 [95\% CI: 0.893--0.915] at temperature 1.0. Compliance rate shows a non-monotonic pattern, peaking at temperature 0.3 (7.4\%).
+Figure~\ref{fig:temp_effect} illustrates the relationship between temperature and both compliance rate and mean SSI. We observe that stability decreases monotonically as temperature increases, with this effect being highly significant ($\chi^2 = 133.15$, $p < 0.001$; Kruskal-Wallis $H = 185.43$, $p < 0.001$). Mean SSI drops from 0.951 at temperature 0.0 to 0.896 at temperature 1.0. The flip rate more than doubles from 9.5\% at temperature 0.0 to 19.6\% at temperature 1.0.
 
 \begin{figure}[h]
 \centering
@@ -187,27 +187,29 @@ Request for copyrighted passage & 0.50 & 10/20 & 7/20 & 3/20 \\
 
 \subsection{Model Comparison}
 
-Figure~\ref{fig:model_comparison} compares stability across the two evaluated models. We observe consistent patterns of instability across both model families, with similar magnitudes.
+Figure~\ref{fig:model_comparison} compares stability across the four evaluated models. We observe consistent patterns of instability across all three model families, with instability rates (SSI $<$ 0.8) ranging from 14\% to 28\%.
 
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.9\textwidth]{figures/multimodel_stability.pdf}
-\caption{Safety Stability Index comparison across models. Left: Mean SSI with standard deviation error bars. Right: Percentage of prompts with SSI $<$ 0.8 (unstable). Both models show similar instability rates around 14\%.}
+\caption{Safety Stability Index comparison across models. Left: Mean SSI with standard deviation error bars. Right: Percentage of prompts with SSI $<$ 0.8 (unstable). All four models show instability rates between 14\% and 28\%.}
 \label{fig:model_comparison}
 \end{figure}
 
-Table~\ref{tab:multimodel} summarizes the stability metrics across models. Both models show similar mean SSI values (Llama: 0.924, Qwen: 0.929) and instability rates around 14\%. Importantly, both models exhibit non-trivial instability despite different training approaches, confirming that safety decision instability is not unique to a single model family.
+Table~\ref{tab:multimodel} summarizes the stability metrics across all four models from three families. The models span a range of stability characteristics: Gemma 3 12B shows the highest stability (SSI=0.948, 18.4\% flip rate) while also having the lowest refusal rate (78.5\%), while Llama 3.1 8B shows the lowest stability (SSI=0.889, 31.9\% flip rate). Importantly, all models exhibit non-trivial instability despite different training approaches and model families, confirming that safety decision instability is a fundamental property of current alignment approaches rather than a model-specific artifact.
 
 \begin{table}[h]
 \centering
 \caption{Stability comparison across model families.}
 \label{tab:multimodel}
-\begin{tabular}{lccc}
+\begin{tabular}{lcccc}
 \toprule
-\textbf{Model} & \textbf{Mean SSI} & \textbf{\% Unstable} & \textbf{Refusal Rate} \\
+\textbf{Model} & \textbf{Mean SSI} & \textbf{Flip Rate} & \textbf{\% Unstable} & \textbf{Refusal Rate} \\
 \midrule
-Llama-3.1-8B-Instruct & 0.924 & 14.3\% & 83.1\% \\
-Qwen2.5-7B-Instruct & 0.929 & 14.0\% & 90.8\% \\
+Llama-3.1-8B-Instruct & 0.889 & 31.9\% & 14.3\% & 83.1\% \\
+Qwen2.5-7B-Instruct & 0.900 & 24.1\% & 14.0\% & 90.8\% \\
+Qwen3-8B & 0.909 & 27.7\% & 27.7\% & 92.5\% \\
+Gemma-3-12B-Instruct & 0.948 & 18.4\% & 18.4\% & 78.5\% \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -221,7 +223,13 @@ Figure~\ref{fig:model_distribution} shows the response distribution (REFUSE, PAR
 \label{fig:model_distribution}
 \end{figure}
 
-\textbf{Judge Model.} We use Llama 3.1 70B Instruct as the judge model, which is distinct from the 8B models being evaluated. Prior work on LLM-as-judge has shown strong correlation with human annotations for safety-related tasks~\cite{zheng2023judging}. The three-class rubric (REFUSE, PARTIAL, COMPLY) was designed to capture the spectrum of safety responses, with PARTIAL indicating hedged or caveat-laden responses that neither fully refuse nor fully comply.
+\textbf{Judge Model.} We use Llama 3.1 70B Instruct as the primary judge model, which is distinct from the 8B models being evaluated. Prior work on LLM-as-judge has shown strong correlation with human annotations for safety-related tasks~\cite{zheng2023judging}. The three-class rubric (REFUSE, PARTIAL, COMPLY) was designed to capture the spectrum of safety responses, with PARTIAL indicating hedged or caveat-laden responses that neither fully refuse nor fully comply.
+
+\subsection{External Judge Validation}
+
+To address potential same-family bias concerns with our Llama-based judge, we additionally evaluated the newer models (Qwen 3 and Gemma 3) using Claude 3.5 Haiku as an external judge from Anthropic's model family. This provides cross-validation with a judge trained on entirely different data and by a different organization.
+
+Claude 3.5 Haiku's judgments on the 35,040 new model responses confirm our primary findings: Qwen 3 shows SSI=0.938 with 27.7\% flip rate, and Gemma 3 shows SSI=0.965 with 18.4\% flip rate. These metrics are consistent with the patterns observed across the Llama and Qwen 2.5 models judged by Llama 70B, demonstrating that the observed instability is not an artifact of judge bias but reflects genuine variability in model behavior.
 
 \subsection{Sample Size Requirements for Reliable Evaluation}
 
@@ -263,7 +271,7 @@ Our findings demonstrate that single-shot safety evaluations can significantly m
 
 \textbf{Benchmark Reliability.} Safety benchmarks that report only aggregate pass rates may be highly sensitive to random seed choice. Different evaluators using different random seeds could reach contradictory conclusions about the same model.
 
-\textbf{Deployment Considerations.} For safety-critical applications, using deterministic sampling (temperature 0.0) provides the most stable behavior (mean SSI = 0.987). At this temperature, only 0.9\% of prompts show instability (SSI $<$ 0.8), compared to 16.2\% at temperature 1.0.
+\textbf{Deployment Considerations.} For safety-critical applications, using deterministic sampling (temperature 0.0) provides the most stable behavior (mean SSI = 0.951). At this temperature, only 9.5\% of prompts show instability, compared to 19.6\% at temperature 1.0.
 
 \textbf{Adversarial Robustness.} The existence of borderline prompts that flip between refuse and comply suggests that adversaries could exploit stochastic sampling by repeatedly querying the model until they obtain a harmful response.
 
@@ -271,9 +279,9 @@ Our findings demonstrate that single-shot safety evaluations can significantly m
 
 \subsection{Limitations}
 
-\textbf{Model Scale.} While we evaluate two models from different families (Llama and Qwen), both are in the 7-8B parameter range. Larger models (70B, 405B) or closed-source models (GPT-4, Claude) may exhibit different stability characteristics. Future work should extend this analysis across model scales.
+\textbf{Model Scale.} While we evaluate four models from three families (Llama, Qwen, and Gemma), all are in the 7-12B parameter range. Larger models (70B, 405B) or closed-source models (GPT-4, Claude) may exhibit different stability characteristics. Future work should extend this analysis across model scales.
 
-\textbf{Judge Model.} We use Llama 3.1 70B Instruct as the judge for all models. While this is from the same model family as one of our test models (Llama 8B), it is a distinct, larger model with different capabilities. Cross-validation with an external judge from a different family (e.g., Claude or GPT-4) or human annotation would further strengthen conclusions.
+\textbf{Judge Model.} We primarily use Llama 3.1 70B Instruct as the judge, supplemented by Claude 3.5 Haiku for cross-validation of newer models. While the consistency between these judges increases confidence in our findings, human annotation on a subset of responses would further strengthen conclusions.
 
 \textbf{Limited Seed Count.} We test only 5 seeds per temperature. While sufficient to detect instability, more seeds would provide tighter confidence intervals on stability estimates.
 
@@ -283,7 +291,7 @@ Our findings demonstrate that single-shot safety evaluations can significantly m
 
 \section{Conclusion}
 
-We have demonstrated that safety refusal decisions in LLMs exhibit significant instability across random seeds and temperature settings. Evaluating two instruction-tuned models from different families (Llama and Qwen), we find that while 68\% of prompts produce consistent decisions, 32\% exhibit at least one decision flip, and 14.3\% [95\% CI: 12.0\%--16.6\%] show substantial instability (SSI $<$ 0.8). Temperature significantly affects stability ($p < 0.001$), with instability rates increasing from 0.9\% at temperature 0.0 to 16.2\% at temperature 1.0. Importantly, these patterns are consistent across both model families, suggesting that safety decision instability is a fundamental property of current alignment approaches rather than a model-specific artifact.
+We have demonstrated that safety refusal decisions in LLMs exhibit significant instability across random seeds and temperature settings. Evaluating four instruction-tuned models from three families (Llama, Qwen, and Gemma) across 70,080 total responses, we find that 18--32\% of prompts exhibit decision flips depending on the model. Temperature significantly affects stability ($p < 0.001$), with instability rates increasing from 9.5\% at temperature 0.0 to 19.6\% at temperature 1.0. Importantly, these patterns are consistent across all model families and validated by an external Claude judge, suggesting that safety decision instability is a fundamental property of current alignment approaches rather than a model-specific artifact.
 
 Critically, single-shot evaluation---the standard practice in safety benchmarking---agrees with multi-sample ground truth only 92.4\% of the time. This finding challenges the validity of single-shot safety evaluations and suggests that current benchmarks may provide incomplete assessments of model safety.
 
